# arquitectos-revamp

./: README.md
api/: .env-template  README.md  manage.py  pyproject.toml
api/arquitectos/apps/cms/: blocks.py  models.py  snippets.py  variables.py
api/arquitectos/apps/cms/migrations/: 0003_gallerypage_detailsgallerypage.py  0004_alter_detailsgallerypage_options_and_more.py  0005_alter_homepage_blocks.py
api/arquitectos/apps/cms/template_tags/: header_tags.py
api/arquitectos/apps/cms/templates/: base.html
api/arquitectos/apps/cms/templates/cms/: details_gallery_page.html  gallery_page.html  home_page.html
api/arquitectos/apps/cms/templates/header/: header.html  menu.html
api/arquitectos/apps/cms/templatetags/: header_tags.py
api/arquitectos/django/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
front/: nuxt.config.js  package-lock.json  package.json
front/components/blocks/: Title1.vue
front/components/blocks/cards-block/: card.vue
front/pages/: *.vue
